--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.tsx",
   "scripts": {
-    "dev": "webpack serve",
+    "dev": "webpack serve --config webpack.config.dev.js",
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
